<resources>
    <string name="app_name">BlackHole</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="camera">Camera</string>
    <string name="show_all_images">Show all images</string>
    <string name="image">Image</string>
    <string name="sample_text">Sample text</string>
    <string name="firebase_login">Firebase login</string>
    <string name="login_with_google">Login with google</string>
    <string name="logout_with_google">logout_with_google</string>
    <string name="show_all_albums">Show all albums</string>
    <string name="Upload">Upload</string>
    <string name="Retake">Retake</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="Relocate">ReLocate</string>


</resources>
