<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".viwes.fragments.CameraFragment"
    android:background="@color/blackColor">


    <ImageView
        android:id="@+id/imageFromCameraIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image" />

    <ProgressBar
        android:id="@+id/progressCircular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="300dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/uploadBTN"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_above="@+id/retakeImageBTN"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/ic_upload_image"
        android:paddingTop="3dp"
        android:text="@string/Upload"
        android:textColor="#fff"
        android:textSize="10sp" />

    <Button
        android:id="@+id/retakeImageBTN"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_above="@+id/moveToOriginalPositionBTN"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/ic_retake_image"
        android:paddingTop="3dp"
        android:text="@string/Retake"
        android:textColor="#fff"
        android:textSize="10sp" />

    <Button
        android:id="@+id/deleteBTN"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/ic_cancel"
        android:paddingTop="3dp"
        android:text="@string/Cancel"
        android:textColor="#fff"
        android:textSize="10sp" />

    <Button
        android:id="@+id/moveToOriginalPositionBTN"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_above="@+id/deleteBTN"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/ic_fullscreen"
        android:paddingTop="3dp"
        android:text="@string/Relocate"
        android:textColor="#fff"
        android:textSize="8sp" />


</RelativeLayout>