<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viwes.fragments.MainFragment"
    android:padding="5dp">


<!--
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="copy"
        android:onClick="copyThat"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="download from usb"
        android:onClick="downloadFromUsb"/>
-->

    <Button
        android:id="@+id/takeImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="200dp"
        android:text="@string/camera" />

    <Button
        android:id="@+id/openImageListFragmentBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="350dp"
        android:text="@string/show_all_images" />


    <Button
        android:id="@+id/openAlbumsListFragmentBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openImageListFragmentBTN"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:text="@string/show_all_albums" />


    <ImageView
        android:id="@+id/newPhotoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/image" />


    <com.dk.blackhole.viwes.components.CustomViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="-300dp"/>

    <ImageButton
        android:focusable="true"
        android:id="@+id/closeViewPagerBT"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close_black_24dp" />


</RelativeLayout>