<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".viwes.SignInActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_firebase_logo"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:id="@+id/setNameET"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="318dp"
        android:background="@drawable/round_bg"
        android:hint="Please enter your name: "
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firebase_login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/image"
        android:gravity="center"/>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progressCircular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/login_with_google"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawableLeft="@drawable/ic_google_logo"/>
    <Button
        android:visibility="invisible"
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/logout_with_google"
        android:background="@drawable/round_bg" />

    <!--
    <Button

        android:layout_marginTop="400dp"
        android:onClick="test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
-->



</RelativeLayout>